# MyMUG

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  note.cpp  note.h
code/: Key.hpp  Note.hpp  Song.hpp  ViewModel.cpp  ViewModel.h  noteBlock.cpp  track.cpp
code/App/: GameApp.cpp  GameApp.h
code/Common/: Key.hpp  NoteInfo.h
code/View/: KeyEvent.h  ScoreEnd.cpp  accuracyBlock.cpp  accuracyBlock.h  albumBlock.cpp  albumBlock.h  backgroundBlock.cpp  backgroundBlock.h  comboBlock.cpp  comboBlock.h  levelBlock.cpp  levelBlock.h  mainwindow.cpp  mainwindow.h  maxComboBlock.cpp  noteBlock.cpp  noteBlock.h  performListBlock.cpp  resource.qrc  resources.qrc  scoreBlock.cpp  scoreTitleBlock.cpp  scoreTitleBlock.h  scoreblock.h  track.cpp  track.h
code/View/play/: ScoreEnd.h  accuracyBlock.cpp  accuracyBlock.h  backgroundBlock.cpp  backgroundBlock.h  comboBlock.cpp  judgementLine.cpp  judgementLine.h  mainwindow.cpp  mainwindow.h  maxComboBlock.cpp  maxComboBlock.h  noteBlock.cpp  noteBlock.h  performListBlock.h  scoreblock.h
code/View/select/: selectwindow.cpp  selectwindow.h
code/ViewModel/: Chronostasis.json  Key.hpp  MusicThread.cpp  MusicThread.h  Note.hpp  PlayThread.cpp  PlayThread.h  Song.hpp  ViewModel.cpp  ViewModel.hpp
documents/: co.md  game.md
include/: noteBlock.h
resources/charts/: Chronostasis.json  Cyaegha.json  Inverted World.json
